derive_tests/tests/compile_fail/unknown_arg.stderr
error: Unrecognized range parameter
 --> tests/compile_fail/unknown_arg.rs:5:22
  |
5 |     #[validate(range(mi = 2, max = 3))]
  |                      ^^
